
find_package(Python3 REQUIRED COMPONENTS Interpreter)

macro(pnnx_onnx_add_test name)
    add_test(NAME test_onnx_${name} COMMAND ${CMAKE_COMMAND} -DPYTHON_EXECUTABLE=${Python3_EXECUTABLE} -DPYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/test_${name}.py -P ${CMAKE_CURRENT_SOURCE_DIR}/../run_test.cmake)
endmacro()

pnnx_onnx_add_test(F_conv_transpose1d)
pnnx_onnx_add_test(F_conv_transpose2d)
pnnx_onnx_add_test(F_conv_transpose3d)
pnnx_onnx_add_test(F_conv1d)
pnnx_onnx_add_test(F_conv2d)
pnnx_onnx_add_test(F_conv3d)
pnnx_onnx_add_test(F_pad)
pnnx_onnx_add_test(F_relu)

pnnx_onnx_add_test(nn_ConstantPad1d)
pnnx_onnx_add_test(nn_ConstantPad2d)
pnnx_onnx_add_test(nn_ConstantPad3d)
pnnx_onnx_add_test(nn_Conv1d)
pnnx_onnx_add_test(nn_Conv2d)
pnnx_onnx_add_test(nn_Conv3d)
pnnx_onnx_add_test(nn_ConvTranspose1d)
pnnx_onnx_add_test(nn_ConvTranspose2d)
pnnx_onnx_add_test(nn_ConvTranspose3d)
pnnx_onnx_add_test(nn_ReflectionPad1d)
pnnx_onnx_add_test(nn_ReflectionPad2d)
# pnnx_onnx_add_test(nn_ReLU)
pnnx_onnx_add_test(nn_ReplicationPad1d)
pnnx_onnx_add_test(nn_ReplicationPad2d)
pnnx_onnx_add_test(nn_ReplicationPad3d)

pnnx_onnx_add_test(convnext_tiny)
pnnx_onnx_add_test(mobilenet_v2)
pnnx_onnx_add_test(mobilenet_v3_small)
pnnx_onnx_add_test(resnet18)
pnnx_onnx_add_test(shufflenet_v2_x1_0)
pnnx_onnx_add_test(squeezenet1_1)
pnnx_onnx_add_test(swin_t)
pnnx_onnx_add_test(vit_b_32)
